<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@drawable/login"    
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#2487e2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="用户登入"
            android:textColor="#ddffffff"
            android:textSize="30dp" />

        <ImageView
            android:layout_alignParentRight="true"
            android:layout_marginRight="90dp"
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:src="@drawable/setting" />

        <Button
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:id="@+id/setting"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00000000"
            android:text="@string/setting" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="355dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:maxLines="1"
                android:inputType="text"
                android:id="@+id/accountET"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/hint_name"
                android:layout_weight="1"
                android:gravity="center"
                android:background="#ffffff"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="10dp" />
            <EditText
                android:maxLines="1"
                android:inputType="textPassword"
                android:id="@+id/pwdET"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/hint_pwd"
                android:layout_weight="1"
                android:password="true"
                android:gravity="center"
                android:background="#ffffff"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp" >
            <CheckBox
                android:id="@+id/jzpwdCB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/rememberpwd" />

            <CheckBox
                android:id="@+id/autologCB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/auto_login" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >
            <Button
                android:id="@+id/loginBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/login" />
            <TextView
                android:layout_width="15dp"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/regBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/register" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp" />
    </LinearLayout>

</LinearLayout>
